[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "^0.10.0" , features = [ "mock", "debug-print", "runtime-tokio-rustls", "sqlx-postgres" ] }
async-graphql = { version = "5.0.4", features = ["chrono", "uuid", "log", "dataloader", "apollo_tracing"] }
poem = { version = "1.3.50", features = ["anyhow", "test"] }
async-graphql-poem = "5.0.3"
async-std = { version = "^1", features = ["attributes", "tokio1"] }
chrono = "0.4.23"
serde = { version = "1", features = ["derive"] }
serde_json = "^1"
clap = { version = "4.0.22", features = ["derive", "env"] }
anyhow = "1.0.66"
dotenv = "0.15.0"
uuid = "1.2.2"
log = "0.4.17"
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.10.0"

[dependencies.fireblocks]
path = "../fireblocks"