[package]
name = "api"
version = "0.1.0"
publish = false
authors = [
  "Holaplex <engineering@holaplex.com>",
]
edition = "2021"
description = "Holaplex Hub treasury service"
readme = "./README.md"
repository = "https://github.com/holaplex/hub-treasuries"
license = "AGPL-3.0-or-later"
keywords = ["hub", "holaplex", "web3"]
categories = ["cryptography::cryptocurrencies", "web-programming"]


[dependencies]
sea-orm = { version = "0.10.6" , features = [ "mock", "debug-print", "runtime-tokio-rustls", "sqlx-postgres" ] }
async-graphql = { version = "5.0.4", features = ["chrono", "uuid", "log", "dataloader", "apollo_tracing"] }
poem = { version = "1.3.50", features = ["anyhow", "test"] }
async-graphql-poem = "5.0.3"
chrono = "0.4.23"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
clap = { version = "4.0.32", features = ["derive", "env"] }
anyhow = "1.0.68"
dotenv = "0.15.0"
uuid = "1.2.2"
log = "0.4.17"
tokio = { version = "1.23.0", features = ["full"] }
env_logger = "0.10.0"
solana-program = "1.14.11"
solana-sdk = "1.14.11"
hex = "0.4.3"
solana-client = "1.14.11"

[dependencies.fireblocks]
path = "../fireblocks"