[package]
name = "holaplex-hub-treasuries"
version = "0.1.0"
publish = false
authors = [
  "Holaplex <engineering@holaplex.com>",
]
edition = "2021"
description = "Holaplex Hub treasury service"
readme = "./README.md"
repository = "https://github.com/holaplex/hub-treasuries"
license = "AGPL-3.0-or-later"
keywords = ["hub", "holaplex", "web3"]
categories = ["cryptography::cryptocurrencies", "web-programming"]

build = "build.rs"

[lib]

[dependencies]
sea-orm = { version = "0.11.3", features = [
  "debug-print",
  "runtime-tokio-rustls",
  "sqlx-postgres",
] }
async-graphql = { version = "5.0.9", features = [
  "chrono",
  "uuid",
  "log",
  "dataloader",
  "apollo_tracing",
] }
serde = { version = "1.0.163", features = ["derive"] }
poem = { version = "1.3.55", features = ["anyhow", "test"] }
async-graphql-poem = "5.0.9"
async-trait = "0.1.68"
prost = "0.11.9"
hex = "0.4.3"
bincode = "1.3.3"
strum = { version = "0.24.1", features = ["derive"] }
solana-sdk = "1.14.11"
bs58 = "0.5.0"
futures = "0.3.5"
prost-types = "0.11.9"

[dependencies.hub-core]
package = "holaplex-hub-core"
version = "0.4.1"
git = "https://github.com/holaplex/hub-core"
branch = "stable"
features = ["kafka", "credits"]

[build-dependencies.hub-core-build]
package = "holaplex-hub-core-build"
version = "0.2.1"
git = "https://github.com/holaplex/hub-core"
branch = "stable"

[dependencies.fireblocks]
path = "../fireblocks"
