[package]
name = "fireblocks"
version = "0.1.0"
publish = false
authors = [
  "Holaplex <engineering@holaplex.com>",
]
edition = "2021"
description = "Holaplex Hub treasury service"
readme = "./README.md"
repository = "https://github.com/holaplex/hub-treasuries"
license = "AGPL-3.0-or-later"
keywords = ["hub", "holaplex", "web3"]
categories = ["cryptography::cryptocurrencies", "web-programming"]


[dependencies]
sha2 = "~0.10"
hex = "~0.4.0"
serde = { version = "1.0.91", features = ["derive"] }
jsonwebtoken = "8.2.0"
reqwest = { version = "0.11.14", features = ["json"] }
poem-openapi = { version = "2.0.23", features = ["swagger-ui", "uuid", "chrono"] }

[dependencies.hub-core]
package = "holaplex-hub-core"
version = "0.1.0"
git = "https://github.com/holaplex/hub-core"
branch = "stable"