[package]
name = "fireblocks"
version = "0.1.1"
publish = false
authors = [
  "Holaplex <engineering@holaplex.com>",
]
edition = "2021"
description = "Holaplex Hub treasury service"
readme = "./README.md"
repository = "https://github.com/holaplex/hub-treasuries"
license = "AGPL-3.0-or-later"
keywords = ["hub", "holaplex", "web3"]
categories = ["cryptography::cryptocurrencies", "web-programming"]


[dependencies]
sha2 = "0.10.6"
hex = "0.4.3"
serde = { version = "1.0.163", features = ["derive"] }
jsonwebtoken = "8.3.0"
reqwest = { version = "0.11.18", features = ["json"] }
async-graphql = { version = "5.0.4", features = ["chrono", "uuid", "log", "dataloader", "apollo_tracing"] }

[dependencies.hub-core]
package = "holaplex-hub-core"
version = "0.5.1"
git = "https://github.com/holaplex/hub-core"
branch = "master"
