[package]
name = "migration"
version = "0.1.0"
publish = false
authors = [
  "Holaplex <engineering@holaplex.com>",
]
edition = "2021"
description = "Holaplex Hub treasury service"
readme = "./README.md"
repository = "https://github.com/holaplex/hub-treasuries"
license = "AGPL-3.0-or-later"
keywords = ["hub", "holaplex", "web3"]
categories = ["cryptography::cryptocurrencies", "web-programming"]

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "0.11.3"
features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
]
